--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,27 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  print-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
+  save_hello_world_output:
     docker:
       - image: circleci/node:13.8.0
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
-      - checkout
       - run:
-          command: "echo Hello, "
-  print-world:
+          command: "echo 'Hello, world!' > output.txt"
+      - persist_to_workspace:
+          root: .
+          paths:
+            - output.txt
+  print_output_file:
     docker:
-     - image: circleci/node:13.8.0
+      - image: circleci/node:13.8.0
     steps:
-      - checkout
-      - run:
-          command: "echo world!"
-
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+      - attach_workspace:
+          at: .
+      - run: cat output.txt
 workflows:
-  print-hello-workflow:
+  save_hello_world_output-workflow:
     jobs:
-      - print-hello
-      - print-world:
+      - save_hello_world_output
+      - print_output_file:
           requires:
-            - print-hello
+            - save_hello_world_output
